# banking-customer-service-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.litellm/: config.yaml
agents/: Dockerfile  README.md  main.py  pyproject.toml
agents/agents/: __init__.py  config.py  customer_service.py  knowledge.py  middleware.py  models.py  models_db.py  repository.py  tools.py  worker.py
agents/agents/clients/: identity_client.py  mcp_client.py
agents/migrations/: env.py
agents/migrations/versions/: 060a8bfc18a6_create_checkpoints_table.py  add_checkpoint_hil_columns.py
agents/tests/: test_customer_service.py  test_knowledge.py  test_worker.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/backend/: app.py  auth.py  broker.py  config.py  database.py  main.py  memory.py  models.py  rate_limit.py  repository.py  schemas.py
backend/backend/knowledge/: __init__.py  chroma_client.py  document_parser.py  embedding_client.py  models.py  repository.py  routes.py  schemas.py  service.py  text_chunker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_backend_initial.py  0002_knowledge_base.py
backend/tests/: conftest.py  test_backend_app.py  test_backend_auth.py  test_backend_config.py  test_backend_database.py  test_chroma_client.py  test_document_parser.py  test_knowledge_service.py  test_text_chunker.py
banking_api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
banking_api/banking_api/: app.py  config.py  database.py  models.py  schemas.py
banking_api/migrations/: env.py
banking_api/migrations/versions/: 0001_banking_api_initial.py
docs/: mkdocs.yml  pyproject.toml
docs/docs/: agents.md  architecture.md  backend.md  deployment.md  development.md  identity.md  index.md  litellm.md
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
docs/specs/: 01-chat-experience.md  02-rag-response-contract.md  README.md
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
identity/: Dockerfile  main.py  pyproject.toml
identity/identity/: app.py  authorization.py  config.py  database.py  main.py  models.py  repository.py  schemas.py
identity/migrations/: README  env.py
identity/migrations/versions/: 0001_identity_initial.py  0002_seed_demo_users.py
identity/tests/: test_identity_app.py  test_identity_config.py  test_identity_database.py
mcp_proxy/: Dockerfile  README.md  pyproject.toml
mcp_proxy/mcp_proxy/: client.py  config.py  main.py  server.py
mcp_proxy/tests/: test_mcp_config.py  test_mcp_server.py
observability/: docker-compose.signoz.yaml  pyproject.toml
observability/observability/: __init__.py  audit.py  audit_buffer.py  bootstrap.py  llm.py  logging.py  messaging.py  metrics.py
observability/tests/: test_messaging.py
specs/: architecture.md  feature-status.md  tech-stack.md
specs/adrs/: 001-agent-middleware.md  002-chat-memory-in-backend.md  003-identity-before-tool-call.md
specs/features/: 01-chat-experience.md  02-rag-response-contract.md  03-credit-limit-increase.md  04-authorization-access-control.md  05-critical-pix.md  06-rbac.md  07-audit.md  08-observability.md  09-mcp-tool-contracts.md  10-security-guardrails.md  11-identity-service.md  12-file-ingestion.md  13-knowledge-base-management.md  README.md
(+3 files in other folders)
