[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastmcp>=3.4.2",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "observability",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[tool.uv.sources]
observability = { path = "../observability", editable = true }
