[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.8,<10.0.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "pyjwt>=2.10.1,<3.0.0",
    "pytest>=9.1.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.30.0,<1.0.0",
]
