[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.8,<10.0.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "chromadb>=1.0.0,<1.4.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.0,<1.0.0",
    "langchain-chroma>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-text-splitters>=1.0.0,<2.0.0",
    "observability",
    "onnxruntime>=1.20.0,<1.24.0",
    "pyjwt>=2.10.1,<3.0.0",
    "pypdf>=5.0.0,<7.0.0",
    "pytest>=9.1.1",
    "python-multipart>=0.0.20,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.30.0,<1.0.0",
]

[tool.uv.sources]
observability = { path = "../observability", editable = true }
