[project]
name = "identity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.1,<2.0.0",
  "fastapi>=0.111.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "observability",
  "sqlalchemy>=2.0.31,<3.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[tool.uv.sources]
observability = { path = "../observability", editable = true }
