[project]
name = "mcp-proxy"
version = "0.1.0"
description = "MCP proxy for banking operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.12.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "observability",
  "pydantic>=2.7.0,<3.0.0",
]

[tool.uv.sources]
observability = { path = "../observability", editable = true }
